package com.Niccolo.splitwise.repository;

public class ExpenseRepository {
}
