package com.Niccolo.splitwise.strategy;

public interface DivisionStrategy {
}
