package com.Niccolo.splitwise.strategy;

public class EqualDivision implements DivisionStrategy {
}
