package com.Niccolo.splitwise.strategy;

public class PercentualDivision implements DivisionStrategy {
}
